@@ -2,14 +2,13 @@ package cc.allio.uno.component.websocket;
 
 import cc.allio.uno.core.util.ClassUtils;
 import cc.allio.uno.core.util.CollectionUtils;
+import jakarta.websocket.Session;
 import org.springframework.core.annotation.AnnotationAwareOrderComparator;
 
-import javax.websocket.Session;
 import java.util.Arrays;
 import java.util.List;
 import java.util.ServiceLoader;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * WebSocket端点认证器
@@ -51,7 +50,7 @@ public class EndpointAuthenticator {
                                 Thread.currentThread().getContextClassLoader()))
                 .stream()
                 .filter(authFilter())
-                .collect(Collectors.toList());
+                .toList();
         AnnotationAwareOrderComparator.sort(connectionAuthenticators);
 
         // 构建消息接收认证器
@@ -61,7 +60,7 @@ public class EndpointAuthenticator {
                                 Thread.currentThread().getContextClassLoader())))
                 .stream()
                 .filter(authFilter())
-                .collect(Collectors.toList());
+                .toList();
         AnnotationAwareOrderComparator.sort(receiveAuthenticators);
 
         // 构建消息发布认证器
@@ -71,7 +70,7 @@ public class EndpointAuthenticator {
                                 Thread.currentThread().getContextClassLoader())))
                 .stream()
                 .filter(authFilter())
-                .collect(Collectors.toList());
+                .toList();
         AnnotationAwareOrderComparator.sort(receiveAuthenticators);
     }
 
